--- a/tribute.html
+++ b/tribute.html
@@ -8,7 +8,15 @@
 <body>
     <main id="main">
         <h1 id="title"></h1>
-    
+        <div id="img-div">
+            <img id="image" src="artorias.jpg" alt="Image of Artorias the Abysswalker by Patricia Casarrubios https://www.facebook.com/Patcas.Illustration ">
+            <figcaption id="img-caption">
+
+            </figcaption>
+        </div>
+        <section id="tribute-info">
+            <a id="tribute-link" href="https://darksouls.wiki.fextralife.com/Artorias+the+Abysswalker" target="_blank">More about Artorias</a>
+        </section>
     </main>
 </body>
 </html>
