added body, h1, and media h1 style

--- a/tribute.html
+++ b/tribute.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <main id="main">
-        <h1 id="title"></h1>
+        <h1 id="title">Artorias the Abysswalker</h1>
         <div id="img-div">
             <img id="image" src="artorias.jpg" alt="Image of Artorias the Abysswalker by Patricia Casarrubios https://www.facebook.com/Patcas.Illustration ">
             <figcaption id="img-caption">
