added text to the tribute-link

--- a/tribute.html
+++ b/tribute.html
@@ -8,14 +8,20 @@
 <body>
     <main id="main">
         <h1 id="title">Artorias the Abysswalker</h1>
+        <p>Guardian of light, sworn to destroy dark.</p>
         <div id="img-div">
             <img id="image" src="artorias.jpg" alt="Image of Artorias the Abysswalker by Patricia Casarrubios https://www.facebook.com/Patcas.Illustration ">
             <figcaption id="img-caption">
-
+                Artorias the Abysswalker was one of the four Knights of Gwyn and the commanding knight of Lord Gwyn's army in the Dark Souls video game.
             </figcaption>
         </div>
         <section id="tribute-info">
-            <a id="tribute-link" href="https://darksouls.wiki.fextralife.com/Artorias+the+Abysswalker" target="_blank">More about Artorias</a>
+            <h3>
+                Learn more about Artorias and the wider dark souls universe on the 
+                <a id="tribute-link" href="https://darksouls.wiki.fextralife.com/Artorias+the+Abysswalker" target="_blank">
+                Fextralife database
+                </a>.
+            </h3>
         </section>
     </main>
 </body>
