--- a/tribute.html
+++ b/tribute.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="stylesheet" href="tribute.css" type="text/css"/>
     <meta charset="utf-8">
     <title>Tribute</title>
 </head>
