added h1 title and header with classes

--- a/survey.html
+++ b/survey.html
@@ -5,9 +5,15 @@
     <meta charset="utf-8">
     <title></title>
 </head>
-<body>
+<body class="container">
+    <header class="header">
+        <h1 id="title" class="text-center">Random Survey Form</h1>
+        <p id="description" class="description text-center">
+            Thank you for taking the time to help me do nothing with this survey!
+        </p>
+    </header>
     <main>
-        
+
     </main>
 </body>
 </html>
