--- a/survey.html
+++ b/survey.html
@@ -13,6 +13,108 @@
         </p>
     </header>
     <main>
+        <form id="survey-form">
+            <div class="form-group">
+                <label id="name-label" for="name">Name</label>
+                <input 
+                    type="text" 
+                    name="name" 
+                    id="name" 
+                    class="form-control" 
+                    placeholder="Enter your name" 
+                    required
+                />
+            </div>
+            <div class="form-group">
+                <label id="email-label" for="email">Email</label>
+                <input
+                    type="email"
+                    name="email"
+                    id="email"
+                    class="form-control"
+                    placeholder="Enter your Email"
+                    required
+                />
+                <div class="form-group">
+                    <label id="number-label" for="number">Age<span class="clue">(optional)</span></label>
+                    <input 
+                        type="number"
+                        name="age"
+                        id="number"
+                        min="10"
+                        max="99"
+                        class="form-control"
+                        placeholder="Age"
+                    />
+                </div>
+                <div class="form-group">
+                    <p>Which best describes your current role?</p>
+                    <select id="dropdown" name="role" class="form-control" required>
+                        <option disabled selected value>Select current role</option>
+                        <option value="student">Student</option>
+                        <option value="job">Full Time Job</option>
+                        <option value="learner">Full Time Learner</option>
+                        <option value="deadBeat">Deadbeat</option>
+                        <option value="preferNo">Prefer not to say</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <p>Would you reommend my useless survey to a friend?</p>
+                    <label>
+                        <input
+                            name="user-recommend"
+                            value="definitely"
+                            type="radio"
+                            class="input-radio"
+                            checked
+                        />
+                        Definitely
+                    </label>
+                    <label>
+                        <input 
+                            name="user-recommend"
+                            value="maybe"
+                            type="radio"
+                            class="input-radio"
+                        />
+                        Maybe
+                    </label>
+                    <label>
+                        <input 
+                            name="user-recommend"
+                            value="not-sure"
+                            type="radio"
+                            class="input-radio"
+                        />
+                        Not sure
+                    </label>
+                    <label>
+                        <input
+                            name="user-recommend"
+                            value="never"
+                            type="radio"
+                            class="input-radio"
+                        />
+                        Never
+                    </label>
+                </div>
+                <div class="form-group">
+                    <p>What is your favorite part about programming?</p>
+                    <select id="most-like" name="mostLike" class="form-control" required>
+                        <option disabled selected value>Select an option</option>
+                        <option value="challenges">Challenges</option>
+                        <option value="projects">Projects</option>
+                        <option value="community">Community</option>
+                        <option value="openSource">Open Source</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <p>What do you want me to improve?<span class="clue">(Check all that apply)</span></p>
+                    
+                </div>
+            </div>
+        </form>
 
     </main>
 </body>
