changed a class attribute

--- a/survey.html
+++ b/survey.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title></title>
 </head>
-<body class="container">
+<body>
+    <div class="container">
     <header class="header">
         <h1 id="title" class="text-center">Random Survey Form</h1>
         <p id="description" class="description text-center">
@@ -218,7 +219,7 @@
                 </div>
             </div>
         </form>
-
     </main>
+    </div>  
 </body>
 </html>
