Added logo picture

--- a/landing.html
+++ b/landing.html
@@ -6,14 +6,15 @@
         <title>Product Landing Page</title>
     </head>
     <body>
-        <header>
-
+        <header id="header">
+            <img id="header-img" src="travel.png" alt="travel logeo by Jaen Zevallos from Pixabay link https://pixabay.com/illustrations/travel-world-around-the-world-plane-1883060/">
+            
         </header>
         <main>
 
         </main>
         <footer>
-            
+
         </footer>
     </body>
 </html>
