--- a/landing.html
+++ b/landing.html
@@ -7,11 +7,20 @@
     </head>
     <body>
         <header id="header">
-            <img id="header-img" src="travel.png" alt="travel logeo by Jaen Zevallos from Pixabay link https://pixabay.com/illustrations/travel-world-around-the-world-plane-1883060/">
-            
+            <img id="header-img" src="whiskey.jpg" alt="whiskey logo">
+            <a href='https://www.freepik.com/vectors/label'>Label vector created by macrovector - www.freepik.com</a>
+            <nav id="nav-bar">
+                <ul>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </nav>
         </header>
         <main>
+            <section id="#">
 
+            </section>
         </main>
         <footer>
 
