--- a/landing.html
+++ b/landing.html
@@ -11,9 +11,9 @@
             <a href='https://www.freepik.com/vectors/label'>Label vector created by macrovector - www.freepik.com</a>
             <nav id="nav-bar">
                 <ul>
-                    <li><a href="#">Sample1</a></li>
-                    <li><a href="#">Sample2</a></li>
-                    <li><a href="#">Sample3</a></li>
+                    <li><a href="#">Uses</a></li>
+                    <li><a href="#">Attachments</a></li>
+                    <li><a href="#">Treatments</a></li>
                 </ul>
             </nav>
         </header>
