--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header id="header">
-            <img id="header-img" src="whiskey.jpg" alt="whiskey logo">
+            <img id="header-img" src="whiskey.jpg" alt="whiskey logo"><br>
             <a href='https://www.freepik.com/vectors/label'>Label vector created by macrovector - www.freepik.com</a>
             <nav id="nav-bar">
                 <ul>
