added sections and articles which link to nav bar.

--- a/landing.html
+++ b/landing.html
@@ -11,15 +11,54 @@
             <a href='https://www.freepik.com/vectors/label'>Label vector created by macrovector - www.freepik.com</a>
             <nav id="nav-bar">
                 <ul>
-                    <li><a href="#">Uses</a></li>
-                    <li><a href="#">Attachments</a></li>
-                    <li><a href="#">Treatments</a></li>
+                    <li><a href="#uses">Uses</a></li>
+                    <li><a href="#attachments">Attachments</a></li>
+                    <li><a href="#treatments">Treatments</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <section id="#">
-
+            <section id="uses">
+                <h2>Uses for Whiskey</h2>
+                <article>
+                    <h3>Used mainly for dealing with the struggles of learning coding.</h3>
+                </article>
+                <article>
+                    <h3>Can be used to forget the failures of coding.</h3>
+                </article>
+                <article>
+                    <h3>Especially useful when dealing with distractions while coding.</h3>
+                </article>
+                <article>
+                    <h3>Incredibly useful when trying to stop thinking about coding outside of "work" hours.</h3>
+                </article>
+            </section>
+            <section id="attachments">
+                <h2>Attachments that compliment your Whiskey</h2>
+                <article>
+                    <h3>A large glass in order to help unnecessary trips to refill your drink.</h3>
+                </article>
+                <article>
+                    <h3>If you don't like the taste of whiskey you can try an assortment of mixing drinks in order to hide the flavor but keep the buzz.</h3>
+                </article>
+                <article>
+                    <h3>There are a large array of ice cube molds, tumblers, and stir sticks for those that prefer a more fancy experience.</h3>
+                </article>
+            </section>
+            <section id="treatments">
+                <h2>Treatments to over use of Whiskey</h2>
+                <article>
+                    <h3>The easiest way to prevent pain associated with whiskey is to monitor and regulate your consumption.</h3>
+                </article>
+                <article>
+                    <h3>For us real people that cannot do that, water is the key to survival.</h3>
+                </article>
+                <article>
+                    <h3>Food is the next most important thing to surviving your whiskey experience.</h3>
+                </article>
+                <article>
+                    <h3>If all else fails, sleep and sleep until you feel normal again.</h3>
+                </article>
             </section>
         </main>
         <footer>
