--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header id="header">
-            <img id="header-img" src="whiskey.jpg" alt="whiskey logo"><br>
+            <img id="header-img" src="whiskey.jpg" alt="generic whiskey logo"><br>
             <a href='https://www.freepik.com/vectors/label'>Label vector created by macrovector - www.freepik.com</a>
             <nav id="nav-bar">
                 <ul>
@@ -18,6 +18,18 @@
             </nav>
         </header>
         <main>
+            <section id="form-section">
+                <h2>Drink, Laugh, Perservere!</h2>
+                <form id="form">
+                    <input
+                        name="email"
+                        id="email"
+                        type="email"
+                        placeholder="Enter email"
+                        required
+                    />
+                </form>
+            </section>
             <section id="uses">
                 <h2>Uses for Whiskey</h2>
                 <article>
