added submit button

--- a/landing.html
+++ b/landing.html
@@ -28,6 +28,11 @@
                         placeholder="Enter email"
                         required
                     />
+                    <input
+                        id="submit"
+                        type="submit"
+                        value="Good Luck!"
+                    />
                 </form>
             </section>
             <section id="uses">
