added video of pouring whiskey.

--- a/landing.html
+++ b/landing.html
@@ -20,7 +20,7 @@
         <main>
             <section id="form-section">
                 <h2>Drink, Laugh, Perservere!</h2>
-                <form id="form">
+                <form id="form" action="https://www.freecodecamp.com/email-submit">
                     <input
                         name="email"
                         id="email"
@@ -34,6 +34,15 @@
                         value="Good Luck!"
                     />
                 </form>
+            </section>
+            <section>
+                <iframe
+                    id="video"
+                    height="315"
+                    src="https://www.youtube.com/watch?v=jMIFOTEWwxQ"
+                    frameborder="0"
+                    allowfullscreen>
+                </iframe>
             </section>
             <section id="uses">
                 <h2>Uses for Whiskey</h2>
