added class nav-link to links as required.

--- a/landing.html
+++ b/landing.html
@@ -11,9 +11,9 @@
             <a href='https://www.freepik.com/vectors/label'>Label vector created by macrovector - www.freepik.com</a>
             <nav id="nav-bar">
                 <ul>
-                    <li><a href="#uses">Uses</a></li>
-                    <li><a href="#attachments">Attachments</a></li>
-                    <li><a href="#treatments">Treatments</a></li>
+                    <li class="nav-link"><a href="#uses">Uses</a></li>
+                    <li class="nav-link"><a href="#attachments">Attachments</a></li>
+                    <li class="nav-link"><a href="#treatments">Treatments</a></li>
                 </ul>
             </nav>
         </header>
