--- a/Technical.html
+++ b/Technical.html
@@ -6,12 +6,24 @@
         <title>Technical Documentation</title>
     </head>
     <body>
-        <header>
-
-        </header>
+        <nav id="navbar">
+            <header>HTML Basics</header>
+            <ul>
+                <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+            </ul>
+        </nav>
         <main id="main-doc">
-            <section class="main-section">
+            <section class="main-section" id="introduction">
+                <header>Introduction</header>
+                <article>
+                    <p>
 
+                    </p>
+                    <p>
+
+                    </p>
+
+                </article>
             </section>
             <section class="main-section">
                 
