added style to nav bar and sections added text

--- a/Technical.html
+++ b/Technical.html
@@ -31,7 +31,9 @@
                 <header>Introduction</header>
                 <article>
                     <p>
-
+                        HTML or Hypertext Markup Language is the framework and bones of the internet.  
+                        This language is responsible for the function and foundation of every web page you have ever viewed.
+                        At its core, HTML is a programming language that tells the computer how to display a web page and how it should be structured.
                     </p>
                     <p>
 
