added p, li, and code to meet requirements

--- a/Technical.html
+++ b/Technical.html
@@ -38,12 +38,23 @@
                     <p>
 
                     </p>
+                    <p>
 
+                    </p>
+                    <p>
+
+                    </p>
+                    <p>
+
+                    </p>
                 </article>
             </section>
             <section class="main-section" id="Page_Layout">
                 <header>Page Layout</header>
                 <article>
+                    <p>
+
+                    </p>
                     <p>
 
                     </p>
@@ -61,6 +72,15 @@
                     <code>
 
                     </code>
+                    <code>
+                        
+                    </code>
+                    <li>
+
+                    </li>
+                    <li>
+
+                    </li>
                     <li>
 
                     </li>
@@ -69,6 +89,12 @@
             <section class="main-section" id="Media">
                 <header>Media</header>
                 <article>
+                    <code>
+
+                    </code>
+                    <code>
+
+                    </code>
                     <code>
 
                     </code>
