--- a/Technical.html
+++ b/Technical.html
@@ -10,7 +10,7 @@
             <header>HTML Basics</header>
             <ul>
                 <li>
-                    <a class="nav-link" href="#Introduction">Introduction</a>
+                    <a class="nav-link" href="#introduction">Introduction</a>
                 </li>
                 <li>
                     <a class="nav-link" href="#Page_Layout">Page Layout</a>
@@ -73,7 +73,7 @@
 
                     </code>
                     <code>
-                        
+
                     </code>
                     <li>
 
