added ide section text

--- a/Technical.html
+++ b/Technical.html
@@ -107,10 +107,19 @@
                 <header>Integrated Development Environments</header>
                 <article>
                     <p>
-
+                        Here's a short list of some of the best development environments to begin coding on your own.
                     </p>
                     <li>
-
+                        Microsoft Visual Studio
+                    </li>
+                    <li>
+                        Atom
+                    </li>
+                    <li>
+                        Brackets.io
+                    </li>
+                    <li>
+                        Sublime
                     </li>
                 </article>
             </section>
