added code to media section

--- a/Technical.html
+++ b/Technical.html
@@ -35,32 +35,12 @@
                         This language is responsible for the function and foundation of every web page you have ever viewed.
                         At its core, HTML is a programming language that tells the computer how to display a web page and how it should be structured.
                     </p>
-                    <p>
-
-                    </p>
-                    <p>
-
-                    </p>
-                    <p>
-
-                    </p>
-                    <p>
-
-                    </p>
                 </article>
             </section>
             <section class="main-section" id="Page_Layout">
                 <header>Page Layout</header>
                 <article>
-                    <p>
-
-                    </p>
-                    <p>
-
-                    </p>
-                    <p>
-
-                    </p>
+                    
                 </article>
             </section>
             <section class="main-section" id="Tags">
@@ -75,32 +55,35 @@
                     <code>
 
                     </code>
-                    <li>
-
-                    </li>
-                    <li>
-
-                    </li>
-                    <li>
-
-                    </li>
                 </article>              
             </section>
             <section class="main-section" id="Media">
                 <header>Media</header>
                 <article>
+                    <p>
+                        A good way to bring your website to life is through media.  These include links to other pages, videos, and images.
+                    </p>
+                    <p>
+                        Here is a sample of link:
+                    </p>
                     <code>
-
+                        &#60;a href="sample.html"&#62;Whatever text you want&#60;/a&#62;
                     </code>
+                    <p>
+                        Sample video:
+                    </p>
                     <code>
-
+                        &#60;video width="size" height="size" controls&#62;<br>
+                            &#60;source src="movie.mp4" type="video/mp4&#62;<br>
+                        alternative text if video doesn't work<br>
+                        &#60;/video&#62;
                     </code>
+                    <p>
+                        Sample Image:
+                    </p>
                     <code>
-
+                        &#60;img src="img.jpg" alt="Alt text"&#62;
                     </code>
-                    <li>
-
-                    </li>
                 </article>
             </section>
             <section class="main-section" id="Integrated_development_environments">
