added id header section

--- a/Technical.html
+++ b/Technical.html
@@ -6,26 +6,28 @@
         <title>Technical Documentation</title>
     </head>
     <body>
-        <nav id="navbar">
-            <header>HTML Basics</header>
-            <ul>
-                <li>
-                    <a class="nav-link" href="#introduction">Introduction</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#Page_Layout">Page Layout</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#Tags">Tags</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#Media">Media</a>
-                </li>
-                <li>
-                    <a class="nav-link" href="#Integrated_development_environments">Integrated Development Environments</a>
-                </li>
-            </ul>
-        </nav>
+        <header id="header">
+            <nav id="navbar">
+                <header>HTML Basics</header>
+                <ul>
+                    <li>
+                        <a class="nav-link" href="#introduction">Introduction</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#Page_Layout">Page Layout</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#Tags">Tags</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#Media">Media</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="#Integrated_development_environments">Integrated Development Environments</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <main id="main-doc">
             <section class="main-section" id="introduction">
                 <header>Introduction</header>
