added nav bar framework

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,21 @@
         <title>Personal Portfolio Webpage</title>
     </head>
     <body>
-        <nav>
-
+        <nav id="navBar">
+            <ul class="navList">
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+            </ul>
         </nav>
         <main>
-            
+
         </main>
     </body>
 </html>
