finished nav bar, added welcome-section

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,21 +6,29 @@
         <title>Personal Portfolio Webpage</title>
     </head>
     <body>
-        <nav id="navBar">
+        <nav id="navbar">
             <ul class="navList">
                 <li>
-                    <a href="#"></a>
+                    <a href="#welcome-section">About</a>
                 </li>
                 <li>
-                    <a href="#"></a>
+                    <a href="#projects">Work</a>
                 </li>
                 <li>
-                    <a href="#"></a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </nav>
         <main>
+            <section id="welcome-section" class="welcome-section">
+                <h1>Hey I am Morgan</h1>
+                <p>An aspiring web developer</p>
+            </section>
+            <section id="projects">
+                <p class="project-tile">
 
+                </p>
+            </section>
         </main>
     </body>
 </html>
