added some project links

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav id="navbar">
-            <ul class="navList">
+            <ul class="nav-list">
                 <li>
                     <a href="#welcome-section">About</a>
                 </li>
@@ -24,10 +24,41 @@
                 <h1>Hey I am Morgan</h1>
                 <p>An aspiring web developer</p>
             </section>
-            <section id="projects">
-                <p class="project-tile">
-
-                </p>
+            <section id="projects" class="projects-section">
+                <h2 class="projects-section-header">Here is a list of some of my projects</h2>
+                <div class="projects-grid">
+                    <a 
+                        href="tribute.html"
+                        target="_blank"
+                        class="project project-tile"
+                        >
+                        <img
+                        class="project-image"
+                        src="artorias.jpg"
+                        alt="tribute page picture"
+                        />
+                        <p class="project-title">
+                            <span class="code">&lt;</span>
+                            Tribute Page
+                            <span class="code">&#47;&gt;</span>
+                        </p>
+                    </a>
+                    <a 
+                        href="landing.html"
+                        target="_blank"
+                        class="project project-tile"
+                        >
+                        <img
+                        class="project-image"
+                        src="whiskey.jpg"
+                        alt="whiskey image for landing page"
+                        />
+                        <p class="project-title">
+                            <span class="code">&lt;</span>
+                            Whiskey Product Page
+                            <span class="code">&#47;&gt;</span>
+                        </p>
+                </div>
             </section>
         </main>
     </body>
