--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,41 @@
                             Whiskey Product Page
                             <span class="code">&#47;&gt;</span>
                         </p>
+                    </a>
+                </div>
+            </section>
+            <section id="contact" class="contact-section">
+                <div class="contact-section-header">
+                    <h2>Can't wait to work together!</h2>
+                    <p>Stay safe out there.</p>
+                </div>
+                <div class="contact-links">
+                    <a
+                        href="https://www.facebook.com/"
+                        target="_blank"
+                        class="btn contact-details"
+                        ><i class="fab fa-facebook-square"></i>
+                        Facebook
+                    </a>
+                    <a
+                        href="https://github.com/"
+                        target="_blank"
+                        class="btn contact-details"
+                        ><i class="fab fa-github"></i>
+                        GitHub
+                    </a>
+                    <a
+                        href="mailto:example@example.com"
+                        class="btn contact-details"
+                        ><i class="fas fa-at"></i>
+                        Send an email
+                    </a>
+                    <a
+                        href="tel:555-555-5555"
+                        class="btn contact-details"
+                        ><i class="fas fa-mobile-alt"></i>
+                        Call now!
+                    </a>
                 </div>
             </section>
         </main>
