--- a/portfolio.html
+++ b/portfolio.html
@@ -96,5 +96,13 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <p>
+                This portfolio is a work in progress and was used for learning purposes only.  The projects and design is based off the tutorial provided by freecodecamp.com and is not representative of my full potential. 
+            </p>
+            <p>
+                &copy; Created by Morgan Stokes 2020
+            </p>
+        </footer>
     </body>
 </html>
